# Graphics-Project

./: README.md  main_project.sln
main_project/: .gitignore  CMakeLists.txt  corridor.cpp  corridor.h  cubehelper.h  curves.cpp  curves.h  dormitorydinning.cpp  draw_helpers.cpp  draw_helpers.h  geometry.cpp  geometry.h  globals.cpp  globals.h  input.cpp  input.h  main.cpp  main_project.vcxproj  main_project.vcxproj.filters  reading room.cpp  room.cpp  room.h  scene.cpp  scene.h  scene_buildings.cpp  scene_buildings.h  scene_cricket.cpp  scene_cricket.h  scene_ground.cpp  scene_ground.h  scene_props.cpp  scene_props.h  shaders.cpp  shaders.h  textures.cpp  textures.h  tvroom.cpp  tvroom.h  utils.cpp  utils.h  (+2 more)
main_project/x64/Debug/: main_project.exe.recipe  main_project.ilk  vc143.idb
main_project/x64/Debug/main_project.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  main_project.lastbuildstate
